Database schemas updated

--- a/isla-del-lago-app/src/main/resources/application-local.properties
+++ b/isla-del-lago-app/src/main/resources/application-local.properties
@@ -2,4 +2,6 @@ spring.datasource.username=isla-del-lago-admin
 spring.datasource.password=IslaDelLagoPassword
 spring.datasource.url=jdbc:mysql://localhost:3306/isla_del_lago_database?createDatabaseIfNotExist=true
 
+spring.flyway.schemas=isla_del_lago_database
+
 jwt.signature.secret=PXI"oUM3nUT)a0iQKRdaSXRKD=!uJLekyWgV=fbx$FdBL2p(kkQWrLwFm5uNVHmtH8=Qpb!7&pO72TnOh7IKlxUNdR/P==/GIt3PX2Qe7aRMVm!S&p9v5vIFgcgTAy4DDKzTSAsQXENLlF2iJVlnZa
