--- a/isla-del-lago-app/src/main/resources/application.properties
+++ b/isla-del-lago-app/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_
 
 spring.flyway.enabled=true
 spring.flyway.baseline-version=1
-spring.flyway.schemas=isla_del_lago_database
+spring.flyway.schemas=${FLYWAY_SCHEMA}
 spring.flyway.locations=classpath:db/migration
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.baseline-on-migrate=true
